# TCP_Device_Control_Program

./: .gitignore  CMakeLists.txt  README.md  build.sh  client_remote_control.html
include/: common.h  hardware.h  server.h
src/: buzzer.c  client.c  i2c_light_temper.c  led.c  main.c  seg7.c  tcp_server.c
